reimplement in terms of hibernate @Type
so that the parameter mechanism can be used to specify the separator character.